fixed flickering issue

--- a/src/components/stylesheets/search.css
+++ b/src/components/stylesheets/search.css
@@ -8,16 +8,17 @@
 .container-search {
   z-index: 1;
   position: relative;
-
 }
 
 .mask-custom {
   background: rgba(24, 24, 16, .2);
   border-radius: 2em;
-  backdrop-filter: blur(15px);
+  /* -webkit-transform:translate3d(0,0,0); */
+  /* backdrop-filter: blur(15px); */
   border: 2px solid rgba(255, 255, 255, 0.05);
   background-clip: padding-box;
   box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.03);
+  position: relative;
 }
 
 .mask-custom-2 {
